// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountCreationProgress final state - account ready 1`] = `""`;

exports[`AccountCreationProgress initial state - before start account setup 1`] = `""`;

exports[`AccountCreationProgress waiting for setup - waiting for ETH funding 1`] = `
<ProgressMessageAndLink
  action={
    Object {
      "getTransaction": [Function],
    }
  }
  waitingMessage="Funding account with ETH..."
/>
`;

exports[`AccountCreationProgress waiting for setup - waiting for MANA funding 1`] = `
<ProgressMessageAndLink
  action={
    Object {
      "getTransaction": [Function],
    }
  }
  waitingMessage="Funding account with MANA..."
/>
`;

exports[`AccountCreationProgress waiting for setup - waiting for MANA funding and marketplace approval 1`] = `
<ProgressMessageAndLink
  action={
    Object {
      "getTransaction": [Function],
    }
  }
  waitingMessage="Funding account with MANA and approving marketplace..."
/>
`;

exports[`AccountCreationProgress waiting for setup - waiting for account generation 1`] = `
<ProgressMessageAndLink
  waitingMessage="Generating account..."
/>
`;

exports[`AccountCreationProgress waiting for setup - waiting for marketplace approval 1`] = `
<ProgressMessageAndLink
  action={
    Object {
      "getTransaction": [Function],
    }
  }
  waitingMessage="Approving marketplace..."
/>
`;
